# harlequin-adapter-template

./: README.md  pyproject.toml
src/harlequin_myadapter/: adapter.py
tests/: test_adapter.py
